[package]
name = "tap-demo"
version = "0.2.1"
authors = ["Tyan Boot <tyanboot@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
libc = "0.2.57"
log = "^0.4"
simple_logger = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
bincode = "^1.1"
socket2 = "0.3.9"
lazy_static = "^1.3.0"
prettytable-rs = "^0.8"